{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 445,
  "lineage": "3a06c4f8-5008-ded2-a77e-939a3d26b408",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:loadbalancer/app/sistemainventario-alb/9af885062253383f",
            "arn_suffix": "app/sistemainventario-alb/9af885062253383f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sistemainventario-alb-789571889.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:251740340893:loadbalancer/app/sistemainventario-alb/9af885062253383f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sistemainventario-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-094a084d40961bbde"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0869fc392d7d6d406"
              },
              {
                "subnet_id": "subnet-09af89a6b0c19da4a"
              }
            ],
            "subnets": [
              "subnet-0869fc392d7d6d406",
              "subnet-09af89a6b0c19da4a"
            ],
            "tags": {
              "Name": "sistemainventario-alb"
            },
            "tags_all": {
              "Name": "sistemainventario-alb"
            },
            "vpc_id": "vpc-0727183964baeafd6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:loadbalancer/app/sistemainventario-alb/9af885062253383f"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:listener/app/sistemainventario-alb/9af885062253383f/22907df38b1738a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:targetgroup/sistemainventario-tg/a9911b08eeb6ec55",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:251740340893:listener/app/sistemainventario-alb/9af885062253383f/22907df38b1738a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:loadbalancer/app/sistemainventario-alb/9af885062253383f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:listener/app/sistemainventario-alb/9af885062253383f/22907df38b1738a9"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:targetgroup/sistemainventario-tg/a9911b08eeb6ec55",
            "arn_suffix": "targetgroup/sistemainventario-tg/a9911b08eeb6ec55",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:251740340893:targetgroup/sistemainventario-tg/a9911b08eeb6ec55",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:251740340893:loadbalancer/app/sistemainventario-alb/9af885062253383f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sistemainventario-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "sistemainventario-target-group"
            },
            "tags_all": {
              "Name": "sistemainventario-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251740340893:targetgroup/sistemainventario-tg/a9911b08eeb6ec55"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:security-group/sg-094a084d40961bbde",
            "description": "Permite HTTP/HTTPS desde Internet hacia el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094a084d40961bbde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sistemainventario-alb-sg",
            "name_prefix": "",
            "owner_id": "251740340893",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sistemainventario-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sistemainventario-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "sg-094a084d40961bbde",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:security-group/sg-0472d360ee1017112",
            "description": "Security group para tareas Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0472d360ee1017112",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP desde ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094a084d40961bbde"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "sistemainventario-ecs-sg",
            "name_prefix": "",
            "owner_id": "251740340893",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sistemainventario-fargate-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sistemainventario-fargate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "sg-0472d360ee1017112",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:security-group/sg-061e855fe2ac3f4e8",
            "description": "Permite HTTPS para endpoints de VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061e855fe2ac3f4e8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Permite que ECS/Fargate acceda a los endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0472d360ee1017112"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sistemainventario-endpoint-sg",
            "name_prefix": "",
            "owner_id": "251740340893",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sistemainventario-endpoint-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sistemainventario-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "sg-061e855fe2ac3f4e8",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:security-group/sg-07b73917ca8fd155c",
            "description": "Permite MySQL solo desde las tareas de Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b73917ca8fd155c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL desde Fargate",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0472d360ee1017112"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sistemainventario-rds-sg",
            "name_prefix": "",
            "owner_id": "251740340893",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sistemainventario-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sistemainventario-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "sg-07b73917ca8fd155c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:internet-gateway/igw-0d66778a33291c4a9",
            "id": "igw-0d66778a33291c4a9",
            "owner_id": "251740340893",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-igw"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-igw"
            },
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:route-table/rtb-09209936c9041e8a1",
            "id": "rtb-09209936c9041e8a1",
            "owner_id": "251740340893",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "sistema-inventario-dev-private-rt"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "rtb-09209936c9041e8a1",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:route-table/rtb-02b61a2566bb9b11b",
            "id": "rtb-02b61a2566bb9b11b",
            "owner_id": "251740340893",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d66778a33291c4a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sistema-inventario-dev-public-rt"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "rtb-02b61a2566bb9b11b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ec2_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01336d2923e14f65d",
            "region": "us-east-2",
            "route_table_id": "rtb-09209936c9041e8a1",
            "subnet_id": "subnet-081ae8eead330896b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_ec2_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ec2_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4ec8d676171c370",
            "region": "us-east-2",
            "route_table_id": "rtb-09209936c9041e8a1",
            "subnet_id": "subnet-00dc1f6e35d0cb90f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_ec2_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rds_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4ca194e86bcc4de",
            "region": "us-east-2",
            "route_table_id": "rtb-09209936c9041e8a1",
            "subnet_id": "subnet-03ae97954ebc8ece0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_rds",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rds_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066a88d5f2f4fd433",
            "region": "us-east-2",
            "route_table_id": "rtb-09209936c9041e8a1",
            "subnet_id": "subnet-0c056edb64083604b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_rds_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4b45a2f7e55c081",
            "region": "us-east-2",
            "route_table_id": "rtb-02b61a2566bb9b11b",
            "subnet_id": "subnet-09af89a6b0c19da4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01038c4768892d49b",
            "region": "us-east-2",
            "route_table_id": "rtb-02b61a2566bb9b11b",
            "subnet_id": "subnet-0869fc392d7d6d406"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ec2_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:subnet/subnet-081ae8eead330896b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081ae8eead330896b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251740340893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-private-ec2-a"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-private-ec2-a"
            },
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "subnet-081ae8eead330896b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ec2_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:subnet/subnet-00dc1f6e35d0cb90f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dc1f6e35d0cb90f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251740340893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-private-ec2-b"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-private-ec2-b"
            },
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "subnet-00dc1f6e35d0cb90f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:subnet/subnet-03ae97954ebc8ece0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ae97954ebc8ece0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251740340893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-private-rds"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-private-rds"
            },
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "subnet-03ae97954ebc8ece0",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:subnet/subnet-0c056edb64083604b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c056edb64083604b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251740340893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-private-rds-b"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-private-rds-b"
            },
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "subnet-0c056edb64083604b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:subnet/subnet-09af89a6b0c19da4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09af89a6b0c19da4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251740340893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-public-a"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-public-a"
            },
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "subnet-09af89a6b0c19da4a",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:subnet/subnet-0869fc392d7d6d406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0869fc392d7d6d406",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251740340893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-public-b"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-public-b"
            },
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "subnet-0869fc392d7d6d406",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:vpc/vpc-0727183964baeafd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0427cac653f106a70",
            "default_route_table_id": "rtb-07d53651dc0814b91",
            "default_security_group_id": "sg-0d3758d2073a82906",
            "dhcp_options_id": "dopt-0e1f839a3e57e7494",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0727183964baeafd6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d53651dc0814b91",
            "owner_id": "251740340893",
            "region": "us-east-2",
            "tags": {
              "Name": "sistema-inventario-dev-vpc"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:vpc-endpoint/vpce-0edd247823fe1c6e4",
            "dns_entry": [
              {
                "dns_name": "vpce-0edd247823fe1c6e4-i6kqbcy1.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0edd247823fe1c6e4-i6kqbcy1-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0edd247823fe1c6e4-i6kqbcy1-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z001369232NAKIHZ7I23U"
              },
              {
                "dns_name": "ecr.us-east-2.api.aws",
                "hosted_zone_id": "Z00025681G6YPMYHL5KB1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0edd247823fe1c6e4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-005c2850a5afe0441",
              "eni-07743d9c25eeedc96"
            ],
            "owner_id": "251740340893",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-061e855fe2ac3f4e8"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.121",
                "subnet_id": "subnet-081ae8eead330896b"
              },
              {
                "ipv4": "10.1.2.54",
                "subnet_id": "subnet-00dc1f6e35d0cb90f"
              }
            ],
            "subnet_ids": [
              "subnet-00dc1f6e35d0cb90f",
              "subnet-081ae8eead330896b"
            ],
            "tags": {
              "Name": "sistema-inventario-dev-ecr-api-endpoint",
              "Project": "sistema-inventario-dev"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-ecr-api-endpoint",
              "Project": "sistema-inventario-dev"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "vpce-0edd247823fe1c6e4",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.endpoint_sg",
            "module.vpc.aws_subnet.private_ec2_a",
            "module.vpc.aws_subnet.private_ec2_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:vpc-endpoint/vpce-005e65d29a996e5b5",
            "dns_entry": [
              {
                "dns_name": "vpce-005e65d29a996e5b5-tplcfowc.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-005e65d29a996e5b5-tplcfowc-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-005e65d29a996e5b5-tplcfowc-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z104413021UL30LY6IO6S"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z104413021UL30LY6IO6S"
              },
              {
                "dns_name": "dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z1020247OZYT6C0BUL9R"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z1020247OZYT6C0BUL9R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-005e65d29a996e5b5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-009e29c8d5e864d94",
              "eni-0ba021f47ad465027"
            ],
            "owner_id": "251740340893",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-061e855fe2ac3f4e8"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.67",
                "subnet_id": "subnet-081ae8eead330896b"
              },
              {
                "ipv4": "10.1.2.221",
                "subnet_id": "subnet-00dc1f6e35d0cb90f"
              }
            ],
            "subnet_ids": [
              "subnet-00dc1f6e35d0cb90f",
              "subnet-081ae8eead330896b"
            ],
            "tags": {
              "Name": "sistema-inventario-dev-ecr-dkr-endpoint",
              "Project": "sistema-inventario-dev"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-ecr-dkr-endpoint",
              "Project": "sistema-inventario-dev"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "vpce-005e65d29a996e5b5",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.endpoint_sg",
            "module.vpc.aws_subnet.private_ec2_a",
            "module.vpc.aws_subnet.private_ec2_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251740340893:vpc-endpoint/vpce-06d6c51a07c1ca62a",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06d6c51a07c1ca62a",
            "ip_address_type": "ipv4",
            "owner_id": "251740340893",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "region": "us-east-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09209936c9041e8a1"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "sistema-inventario-dev-s3-endpoint",
              "Project": "sistema-inventario-dev"
            },
            "tags_all": {
              "Name": "sistema-inventario-dev-s3-endpoint",
              "Project": "sistema-inventario-dev"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0727183964baeafd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "251740340893",
            "id": "vpce-06d6c51a07c1ca62a",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}